# object_tracking

./: CMakeLists.txt  README.md  package.xml
config/: sensors.yaml
data/: data.json
include/object_tracking/: config_loader.hpp  object_tracker_node.hpp  sensor_data_publisher_node.hpp  transform_detections_node.hpp
launch/: object_tracking.launch.py
rviz2/: object_tracking.rviz
src/: config_loader.cpp  object_tracker_node.cpp  sensor_data_publisher_node.cpp  test_tf2.cpp  transform_detections_node.cpp
